sandbox/output
PatientTest.java:14: error: cannot find symbol
        assertEquals(0, patient.clash(Arrays.asList(codeine, prozac), 90));
                                                             ^
  symbol:   variable prozac
  location: class PatientTest
1 error
